src/test/ui/associated-item/associated-item-type-issue-63594.stderr
error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/associated-item-type-issue-63594.rs:16:28
   |
LL |     type Out = Box<dyn Bar<Assoc: Copy>>;
   |                            ^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
